* Fixed ChosenMove list issue with Immutable list * Player's pokemon starts with 2 EV and Level 1 * Refactor main * Improved imports